--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,14 @@ uuid = "d636211e-2ddf-4824-8446-383fe183bfb4"
 authors = ["Matt Lawless"]
 version = "0.1.0"
 
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+[deps]
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
